2008-02-25 Rodrigo Kumpera  <rkumpera@novell.com>

	* loader.c (field_from_memberref): Generate a loader error if the type is not found.

	* loader.c (method_from_memberref): Generate type load error instead of method missing
	if the type is not found.

2008-02-23  Zoltan Varga  <vargaz@gmail.com>

	* marshal.c (mono_marshal_emit_managed_wrapper): Avoid generating invalid IL if
	some of the conversions caused the generation of a marshal directive exception.

2008-02-21 Rodrigo Kumpera  <rkumpera@novell.com>

	verify.c: Report which exception should be thrown by the JIT.
	Added a lot of FIXME notes.

2008-02-22  Mark Probst  <mark.probst@gmail.com>

	* generic-sharing.c: Runtime generic context slots are not
	instantiated on init anymore.  Instead, provide function to do the
	instantiating on demand.

	* class-internals.h: Added vtable to runtime generic context.
	Macros for encoding direct and indirect slot offsets in one
	guint32.

2008-02-21  Mark Probst  <mark.probst@gmail.com>

	* object.c, generic-sharing.c: Moved some generic sharing code
	from object.c to generic-sharing.c.

	* generic-sharing.c: Added support for extensible runtime generic
	context.

	* metadata-internals.h: Two new hash tables in MonoImage for
	extensible runtime generic context support.

	* domain.c: Unregister generic vtables upon domain unloading.

	* image.c: Destroy new hash tables upon image unloading.

	* metadata.c: Unregister generic subclasses upon image unloading.

	* class-internals.h: New data structure for runtime generic
	context template.  New fields in the runtime generic context for
	extensible part.

	* Makefile.am: Added generic-sharing.c.

2008-02-21 Rodrigo Kumpera  <rkumpera@novell.com>

	icall.c (ves_icall_System_Reflection_Module_ResolveTypeToken): If
	there is a pending loader exception, raise it.

	icall.c (ves_icall_System_Reflection_Module_ResolveMethodToken): 
	same.

	icall.c (ves_icall_System_Reflection_Module_ResolveFieldToken): 
	same.

	Fixes #363450.
