@@ -1,5 +1,9 @@
 2008-02-25 Rodrigo Kumpera  <rkumpera@novell.com>
 
+	* verify.c: Proper token validation for field, method and type.
+
+2008-02-25 Rodrigo Kumpera  <rkumpera@novell.com>
+
 	* loader.c (field_from_memberref): Generate a loader error if the type is not found.
 
 	* loader.c (method_from_memberref): Generate type load error instead of method missing
